# RF-Model

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: README.md  logging.cpp  logging.h  main.cpp
bench/: README.md
docs/: UnitsAndConventions.md
engine/: README.md
engine/include/: IChannel.h  IReceiver.h  IRfEngine.h  IRunConfig.h  IScene.h  ISimulationObject.h  ISimulationSystem.h  ITransmitter.h  IWall.h
io/: README.md
math/: README.md
math/include/rfmodel/math/: Complex.h  Decibel.h  Math.h  Vec2.h  Vec3.h
tests/: CMakeLists.txt  README.md
tests/math/: MathUtilitiesTests.cpp
ui/: README.md  mainwindow.ui
